--- a/Views/DatosPersonales/Nuevo.cshtml
+++ b/Views/DatosPersonales/Nuevo.cshtml
@@ -14,15 +14,18 @@
         {
             <div class="form-group">
                 <label for="NombreUsuario"> Nombre de Usuario </label>
-                <input type="text" name="NombreUsuario" value="" class="form-control" />
+                <input type="text" name="NombreUsuario" value="@Model.NombreUsuario" class="form-control" />
+                @Html.ValidationMessageFor(x => x.NombreUsuario)
             </div>
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
                 <input asp-for="Email" class="form-control" />
+                @Html.ValidationMessageFor(x => x.Email)
             </div>
             <div class="form-group">
                 <label asp-for="Documento" class="control-label"></label>
                 <input asp-for="Documento" class="form-control" />
+                @Html.ValidationMessageFor(x => x.Documento)
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
