In this commit we added DB support and Created first repos

--- a/Views/DatosPersonales/Listado.cshtml
+++ b/Views/DatosPersonales/Listado.cshtml
@@ -40,7 +40,7 @@
                 @Html.DisplayFor(modelItem => item.Documento)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.PerfilPropio)
+                @Html.DisplayFor(modelItem => item.IsMainProfile)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
