--- a/Views/DatosPersonales/UserList.cshtml
+++ b/Views/DatosPersonales/UserList.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ResumeCreator.Models.DatosPersonales>
+﻿@model IEnumerable<ResumeCreator.Models.ProfileData>
 
 @{
     ViewData["Title"] = "Listado";
@@ -19,7 +19,7 @@
                 @Html.DisplayNameFor(model => model.Email)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Documento)
+                @Html.DisplayNameFor(model => model.DNI)
             </th>
             <th>
                 Es Cuenta Propia
@@ -31,13 +31,13 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.NombreUsuario)
+                @Html.DisplayFor(modelItem => item.UserName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Documento)
+                @Html.DisplayFor(modelItem => item.DNI)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.IsMainProfile)
