Add new SP and DataProfileRepository logic

--- a/Views/ProfileData/ProfileDataList.cshtml
+++ b/Views/ProfileData/ProfileDataList.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<ResumeCreator.Models.ProfileData>
 
 @{
-    ViewData["Title"] = "Listado";
+    ViewData["Title"] = "List";
 }
 
 <h1>Perfiles</h1>
 
 <p>
-    @Html.ActionLink("Crear Nuevo Perfil","Nuevo","DatosPersonales")
+    @Html.ActionLink("Crear Nuevo Perfil","New","DatosPersonales")
 </p>
 <table class="table">
     <thead>
