Changes in ProfileData Controller ( Edit , New , ProfileDataList )

--- a/Views/ProfileData/Nuevo.cshtml
+++ b/Views/ProfileData/Nuevo.cshtml
@@ -10,11 +10,11 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        @using (Html.BeginForm("Nuevo","DatosPersonales"))
+        @using (Html.BeginForm("New","DatosPersonales"))
         {
             <div class="form-group">
                 <label for="NombreUsuario"> Nombre de Usuario </label>
-                <input type="text" name="NombreUsuario" value="@Model.UserName" class="form-control" />
+                <input type="text" name="UserName" value="@Model.UserName" class="form-control" />
                 @Html.ValidationMessageFor(x => x.UserName)
             </div>
             <div class="form-group">
