--- a/Views/ProfileData/ProfileDataList.cshtml
+++ b/Views/ProfileData/ProfileDataList.cshtml
@@ -28,26 +28,27 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DNI)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IsMainProfile)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.UserName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Email)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DNI)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.IsMainProfile)
+                </td>
+                <td>
+                    @Html.ActionLink("Eliminar", "Deletear","ProfileData", new { Id=item.Id })
+                    @Html.ActionLink("Edit", "Edit","ProfileData", new { Id=item.Id })
+                    @Html.ActionLink("Agregar Estudios", "List","Formation", new { Id=item.Id })
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
