Add User Model and minnor compatibility changes

--- a/Views/ProfileData/Edit.cshtml
+++ b/Views/ProfileData/Edit.cshtml
@@ -38,9 +38,9 @@
             </div>
             
             <div class="form-group">
-                <label asp-for="DependentId" class="control-label"></label>
-                <input asp-for="DependentId" class="form-control" />
-                @Html.ValidationMessageFor(x => x.DependentId)
+                <label asp-for="UserId" class="control-label"></label>
+                <input asp-for="UserId" class="form-control" />
+                @Html.ValidationMessageFor(x => x.UserId)
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
